[metadata]
name = knob
summary = OpenStack SSH as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/knob
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    knob

[entry_points]
console_scripts =
    knob-api = knob.cmd.api:main
    knob-manage = knob.cmd.manage:main

wsgi_scripts =

oslo.config.opts =
    knob.common.config = knob.common.config:list_opts
    knob.common.context = knob.common.context:list_opts
    knob.common.crypt = knob.common.crypt:list_opts
    knob.common.wsgi = knob.common.wsgi:list_opts
    knob.clients = knob.clients:list_opts

oslo.config.opts.defaults =
    knob.common.config = knob.common.config:set_config_defaults

knob.clients =
    barbican = knob.engine.clients.os.barbican:BarbicanClientPlugin
    nova = knob.engine.clients.os.nova:NovaClientPlugin
    neutron = knob.engine.clients.os.neutron:NeutronClientPlugin


[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = knob/locale
domain = knob knob-log-critical knob-log-error knob-log-warning

[update_catalog]
domain = knob
output_dir = knob/locale
input_file = knob/locale/knob.pot

[pbr]
autodoc_index_modules = true
autodoc_exclude_modules =
    knob.testing.*
    knob.cmd.*
    knob.common.*
    knob.doc.*
    knob.db.*
    knob.locale.*

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = knob/locale/knob.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
